fix: moved align and height to styles

--- a/WebTutor/styles.css
+++ b/WebTutor/styles.css
@@ -61,6 +61,8 @@ input {
 }
 
 .image-radius {
+    height: 320px;
+    float: left;
     margin: 0px 15px 5px 0px;
     border-radius: 10px;
     border: 5px solid #FFF;
